--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,5 @@
 
 <ion-content padding>
   <button ion-button (click)="navCtrl.push('MusicListPage')">go to music player list</button>
-  <button ion-button (click)="navCtrl.push('TopListPage')">go to top list</button>
+  <button ion-button (click)="navCtrl.push('TopListPage')">go to top list(test)</button>
 </ion-content>
